--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,11 +1,70 @@
-/* Chrome, Safari, Edge, Opera */
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+/* Font face */
+@font-face {
+  font-family: "Thonburi";
+  font-style: normal;
+  font-weight: normal;
+  src: url("../fonts/ThonBuri.ttf") format("truetype");
 }
 
-/* Firefox */
-input[type=number] {
-  -moz-appearance: textfield;
+@font-face {
+  font-family: "Thonburi";
+  font-style: normal;
+  font-weight: bold;
+  src: url("../fonts/ThonburiBold.ttf") format("truetype");
+}
+
+body {
+  font-family: "Thonburi";
+  background-color: #f8f9fa;
+}
+
+.f-26 {
+  font-size: 26px;
+}
+
+.nav-link {
+  width: 300px;
+  text-align: center;
+}
+
+.navbar {
+  box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
+}
+
+.left-panel {
+  background-color: #fff;
+  padding: 20px;
+}
+
+.right-panel {
+  height: calc(100vh - 85.4px);
+  padding: 20px;
+  box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
+}
+
+.right-panel input {
+  text-align: right;
+}
+
+.cal-table {
+  width: 100%;
+  text-align: right;
+}
+
+.cal-table td:first-child {
+  font-weight: 700;
+  width: 30%;
+  padding-right: 20px;
+}
+
+.btn-group-cal {
+  width: 100%;
+}
+.btn-group-cal button {
+  width: 100%;
+}
+
+table th,
+td {
+  vertical-align: middle !important;
 }
