--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -15,7 +15,12 @@
 
 body {
   font-family: "Thonburi";
+  font-size: 18px;
   background-color: #f8f9fa;
+}
+
+.f-14 {
+  font-size: 14px;
 }
 
 .f-26 {
@@ -25,6 +30,7 @@ body {
 .nav-link {
   width: 300px;
   text-align: center;
+  font-size: 20px;
 }
 
 .navbar {
@@ -57,14 +63,15 @@ body {
   padding-right: 20px;
 }
 
-.btn-group-cal {
-  width: 100%;
-}
-.btn-group-cal button {
-  width: 100%;
-}
-
 table th,
 td {
   vertical-align: middle !important;
+  font-size: 18px;
+}
+
+button.close {
+  color: #dc3545;
+  float: unset;
+  opacity: 1;
+  font-size: 28px;
 }
