--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -14,7 +14,7 @@
 }
 
 body {
-  font-family: "Thonburi";
+  font-family: "Thonburi", 'Cordia New', Courier, monospace !important;
   font-size: 18px;
   background-color: #f8f9fa;
 }
