--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -53,7 +53,7 @@ body {
 }
 
 .cal-table {
-  width: 100%;
+  width: 90%;
   text-align: right;
 }
 
@@ -62,6 +62,7 @@ body {
   width: 30%;
   padding-right: 20px;
 }
+
 
 table th,
 td {
@@ -78,4 +79,10 @@ button.close {
 
 input{
   font-size: 22px !important;
+}
+
+.cal-table .form-control-lg {
+  font-size: 60px !important;
+  font-weight: 900;
+  height: calc(2.875rem + 16px) !important;
 }
