--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -30,7 +30,8 @@ body {
 .nav-link {
   width: 300px;
   text-align: center;
-  font-size: 20px;
+  font-size: 28px;
+  font-weight: 900;
 }
 
 .navbar {
@@ -53,14 +54,15 @@ body {
 }
 
 .cal-table {
-  width: 90%;
+  width: 100%;
   text-align: right;
 }
 
-.cal-table td:first-child {
+.cal-table td:first-of-type {
   font-weight: 700;
   width: 30%;
   padding-right: 20px;
+  font-size: 40px;
 }
 
 
