Font weight bold

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -16,6 +16,7 @@
 body {
   font-family: "Thonburi", 'Cordia New', Courier, monospace !important;
   font-size: 22px;
+  font-weight: bold;
   background-color: #f8f9fa;
 }
 
